<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/nome_completo"
        android:textSize="25sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/digite_seu_nome_completo"
        android:id="@+id/nomeCompleto" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/estado_civil"
        android:textSize="25sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center" >

        <RadioButton
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCasado"
            android:text="@string/casado" />

        <RadioButton
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSolteiro"
            android:text="@string/solteiro" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/g_nero"
        android:textSize="25sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center" >

        <RadioButton
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnMasculino"
            android:text="@string/masculino" />

        <RadioButton
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnFeminino"
            android:text="@string/feminino" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/bebida_preferida"
        android:textSize="25sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center" >

        <RadioButton
            android:textSize="20sp"
            android:id="@+id/btnVinho"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vinho" />

        <RadioButton
            android:textSize="20sp"
            android:id="@+id/btnCerveja"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cerveja" />

        <RadioButton
            android:textSize="20sp"
            android:id="@+id/btnRefrigerante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refrigerante" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entrar"
        android:textSize="20sp"
        android:onClick="secondActivity"/>

</LinearLayout>
